[build] KTC-5721 Fix warning in metadata compiler